--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li><a href="#section4">Tarifa</a></li>
       <li><a href="#section5">Promociones</a> </li>
       <li><a href="#section6">Contacto</a> </li>
-      <li><a href="blog.html"><i class="fa fa-external-link"></i> Blog</a> </li>
+      <li><a href="http://www.autocaravanastucasaacuestas.com/blog.html"><i class="fa fa-external-link"></i> Blog</a> </li>
     </ul>
   </nav>
 </header>
