--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="de">
 <head>
 <meta charset="utf-8">
-<title>Autocaravanas Tu Casa a Cuestas - Alquiler de Acutocaravanas en Sevilla</title>
+<title>Autocaravanas Tu Casa a Cuestas - Vermietung von Wohnmobilen Sevilla</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="weibergmedia">
 <meta name="Description" content="Alquiler de autocaravanas Sevilla" />
@@ -26,8 +26,8 @@
     <div class="parent">
       <div class="child">
         <p class="extra-padding-top"></p>
-        <h1>Autocaravanas Tu Casa a Cuestas</h1>
-        <p class="large">¡Vive una experiencia diferente!</p>
+        <h1>Wohnmobile Tu Casa a Cuestas</h1>
+        <p class="large">Erlebe eine neuartige Erfahrung!</p>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
 <!-- start header -->
 <header class="clearfix">
   <div id="logo"> <a href="index.html">Tu Casa a Cuestas</a> </div>
-  <div class="tagline"><p><span><b>Tu Casa a Cuestas<br>Alquiler de Autocaravanas</b></span></p></div>
+  <div class="tagline"><p><span><b>Tu Casa a Cuestas<br>Vermietung von Wohnmobilen</b></span></p></div>
   <div id="nav-button"> <span class="nav-bar"></span> <span class="nav-bar"></span> <span class="nav-bar"></span> </div>
    <nav>
    <div>
@@ -45,12 +45,12 @@
      <div id="b-de"><a href="http://www.wohnmobilespanien.com">Tu Casa a Cuestas</a>&#160 &#160</div>
    </div>
     <ul id="nav">
-      <li class="active"><a href="#section1">Inicio</a> </li>
-      <li><a href="#section2">Autocaravanas</a> </li>
-      <li><a href="#section3">Reservas</a> </li>
-      <li><a href="#section4">Tarifa</a></li>
-      <li><a href="#section5">Promociones</a> </li>
-      <li><a href="#section6">Contacto</a> </li>
+      <li class="active"><a href="#section1">Startseite</a> </li>
+      <li><a href="#section2">Wohnmobile</a> </li>
+      <li><a href="#section3">Reservierung</a> </li>
+      <li><a href="#section4">Preise</a></li>
+      <li><a href="#section5">Angebote</a> </li>
+      <li><a href="#section6">Kontakt</a> </li>
       <li><a href="http://www.autocaravanastucasaacuestas.com/blog.html"><i class="fa fa-external-link"></i> Blog</a> </li>
     </ul>
   </nav>
@@ -69,8 +69,8 @@
   <div class="container clearfix">
     <div class="nautical-2"></div>
     <div class="col-lg-12 centered header-wrapper">
-      <h2>Nuestras Autocaravanas</h2>
-      <p class="large">Por el momento podemos disfutar de nuestra primera autocaravana que está completamente equipada y pasa antes de cada alquiler un exhaustivo control de seguridad e higiene, se entrega con 1 carga de gas. Esperamos poder ofrecer dos modelos más en breve.</p>
+      <h2>Unsere Wohnmobile</h2>
+      <p class="large">Im Moment können wir Ihnen unser erstes Wohnmobil anbieten, das voll ausgestattet ist und vor jeder Vermietung einer umfassenden Sichtkontrolle unterzogen wird. Das Wohnmobil wird mit einer vollen Ladung Gas vermietet. Wir hoffen bald, Ihnen zwei  weitere Modelle anbieten zu können.</p>
     </div>
     <div class="col-lg-6 col-md-6 with-bg">
       <div class="margin-wrapper flexslider">
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div clas="col-xs-8 col-sm-6">
-    <b>&#160 &#160 Descripción del Vehículo</b>
+    <b>&#160 &#160 Fahrzeugbeschreibung</b>
     <p class="small">&#160 &#160 - FORD con motor Euro 6 - 2,0l - 170 CV - <br>&#160 &#160 &#160 &#160 6 velocidades<br>
      &#160 &#160 - ABS + ESP<br>
      &#160 &#160 - Retrovisores eléctricos y calefactados<br>
