--- a/index.html
+++ b/index.html
@@ -93,19 +93,22 @@
   </div>
   <div clas="col-xs-8 col-sm-6">
     <b>&#160 &#160 Fahrzeugbeschreibung</b>
-    <p class="small">&#160 &#160 - FORD con motor Euro 6 - 2,0l - 170 CV - <br>&#160 &#160 &#160 &#160 6 velocidades<br>
+    <p class="small">&#160 &#160 - -	Wohnmobil Ford mit Diesel Motor, Euro 6, 2,0L Hubraum, 170 PS.<br>
+     &#160 &#160 &#160 &#160 6 Gang Schaltgetriebe<br>
      &#160 &#160 - ABS + ESP<br>
-     &#160 &#160 - Retrovisores eléctricos y calefactados<br>
-     &#160 &#160 - Elevalunas eléctricos<br>
-     &#160 &#160 - Cierre centralizado con mando a distancia<br>
-     &#160 &#160 - Regulador de velocidad<br>
-     &#160 &#160 - Aire acondicionado de cabina manual<br>
-     &#160 &#160 - Airbag conductor y pasajero<br>
-     &#160 &#160 - Retro cámara para facilitar el aparcamiento<br>
-     &#160 &#160 - Radio USB con Bluetooth<br>
-     &#160 &#160 - Mandos de la radio en el volante<br>
-     &#160 &#160 - Asientos conductor y pasajero reclinables, <br>&#160 &#160 &#160 &#160giratorios, regulables en altura y con 2 <br>&#160 &#160 &#160 &#160reposabrazos<br>
-     &#160 &#160 - Y mucho más…<br>
+     &#160 &#160 - Elektrische und beheizte AussenSpiegel<br>
+     &#160 &#160 - Elektrische Fenterheber<br>
+     &#160 &#160 - Zentralverriegelung<br>
+     &#160 &#160 - Tempomat<br>
+     &#160 &#160 - Klimaanlage<br>
+     &#160 &#160 - Fahrer und Beifahrerairbag<br>
+     &#160 &#160 - Rückfahrkamera<br>
+     &#160 &#160 - Radio mit Bluetooth und USB<br>
+     &#160 &#160 - Lenkrad Fernbedienung<br>
+     &#160 &#160 - Fahrer und Beifahrersitz höhenverstellbar und drehbar zum,<br>
+     &#160 &#160 &#160 &#160Wohnbereich im Fond<br>
+     &#160 &#160 &#160 &#160-	Armlehnen<br>
+     &#160 &#160 - Und vieles mehr…<br>
      </p>
   </div>  
    <div>
@@ -113,9 +116,12 @@
     <p class="small">&#160 &#160 - Antena TV TDT omnidireccional + TV 22"<br>
      &#160 &#160 - Iluminación interior LED<br>
      &#160 &#160 - Salón en L<br>
-     &#160 &#160 - Cama suspendida de techo eléctrica 2 PLAZAS <br>&#160 &#160 &#160 &#160(máx. 230kg)<br>
-     &#160 &#160 - Camas gemelas transformables en cama doble <br>&#160 &#160 &#160 &#160de 175x215cm<br>
-     &#160 &#160 - Gran frigorífico 140l con cajón independiente <br>&#160 &#160 &#160 &#160para 9 botellas de 1,5l<br>
+     &#160 &#160 - Cama suspendida de techo eléctrica 2 PLAZAS <br>
+     &#160 &#160 &#160 &#160(máx. 230kg)<br>
+     &#160 &#160 - Camas gemelas transformables en cama doble <br>
+     &#160 &#160 &#160 &#160de 175x215cm<br>
+     &#160 &#160 - Gran frigorífico 140l con cajón independiente <br>
+     &#160 &#160 &#160 &#160para 9 botellas de 1,5l<br>
      &#160 &#160 - Ducha independiente<br>
      &#160 &#160 - Combi calefacción/calentador de agua a gas<br>
      &#160 &#160 - Toldo<br>
