--- a/index.html
+++ b/index.html
@@ -112,24 +112,24 @@
      </p>
   </div>  
    <div>
-    <b>&#160 &#160 Descripción de la Célula</b>
-    <p class="small">&#160 &#160 - Antena TV TDT omnidireccional + TV 22"<br>
-     &#160 &#160 - Iluminación interior LED<br>
-     &#160 &#160 - Salón en L<br>
-     &#160 &#160 - Cama suspendida de techo eléctrica 2 PLAZAS <br>
-     &#160 &#160 &#160 &#160(máx. 230kg)<br>
-     &#160 &#160 - Camas gemelas transformables en cama doble <br>
-     &#160 &#160 &#160 &#160de 175x215cm<br>
-     &#160 &#160 - Gran frigorífico 140l con cajón independiente <br>
-     &#160 &#160 &#160 &#160para 9 botellas de 1,5l<br>
-     &#160 &#160 - Ducha independiente<br>
-     &#160 &#160 - Combi calefacción/calentador de agua a gas<br>
-     &#160 &#160 - Toldo<br>
-     &#160 &#160 - Placa Solar 140w<br>
-     &#160 &#160 - Dos baterias<br>
-     &#160 &#160 - Luz LED exterior<br>
-     &#160 &#160 - Aire Acondicionado (sólo funciona a 220v)<br>
-     &#160 &#160 - Y mucho más…<br>
+    <b>&#160 &#160Beschreibung der Innen Kabine</b>
+    <p class="small">&#160 &#160 - 20 Zoll Flachbildfernseher<br>
+     &#160 &#160 - LED Innenbeleuchtung<br>
+     &#160 &#160 - Wohnbereich im L- Format<br>
+     &#160 &#160 - Elektrisches Hochbett für 2 Personen mit einer Liegefläche von 140 cm x 200 cm<br>
+     &#160 &#160 &#160 &#160( Max. 230 Kg )<br>
+     &#160 &#160 - Doppelbett für 2 Personen mit einer Liege fläche von<br>
+     &#160 &#160 &#160 &#160175 cm  x 215 cm oder Umwandelbar in 2 Einzelbetten<br>
+     &#160 &#160 - Grosser Kühlschrank 140 L Volumen mit besonderem Innenschrank<br>
+     &#160 &#160 &#160 &#160für 9 Flaschen a 1,5 Liter<br>
+     &#160 &#160 - Separate Dusche<br>
+     &#160 &#160 - Heizung und Warmwasser mit Gas<br>
+     &#160 &#160 - Aussen Markise<br>
+     &#160 &#160 - Solarzelle<br>
+     &#160 &#160 - Zwei Baterien<br>
+     &#160 &#160 - LED Aussen Beleuchtung<br>
+     &#160 &#160 - Klimaanlage ( funktioniert  mit 220 Volt )<br>
+     &#160 &#160 - Und vieles mehr<br>
 
      </p>
   </div>  
