--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   </div>
   <div clas="col-xs-8 col-sm-6">
     <b>&#160 &#160 Fahrzeugbeschreibung</b>
-    <p class="small">&#160 &#160 - -	Wohnmobil Ford mit Diesel Motor, Euro 6, 2,0L Hubraum, 170 PS.<br>
-     &#160 &#160 &#160 &#160 6 Gang Schaltgetriebe<br>
+    <p class="small">&#160 &#160 - Wohnmobil Ford mit Diesel Motor, Euro 6, 2,0L Hubraum,<br>
+     &#160 &#160 &#160 &#160170 PS. 6 Gang Schaltgetriebe<br>
      &#160 &#160 - ABS + ESP<br>
      &#160 &#160 - Elektrische und beheizte AussenSpiegel<br>
      &#160 &#160 - Elektrische Fenterheber<br>
@@ -105,8 +105,8 @@
      &#160 &#160 - Rückfahrkamera<br>
      &#160 &#160 - Radio mit Bluetooth und USB<br>
      &#160 &#160 - Lenkrad Fernbedienung<br>
-     &#160 &#160 - Fahrer und Beifahrersitz höhenverstellbar und drehbar zum,<br>
-     &#160 &#160 &#160 &#160Wohnbereich im Fond<br>
+     &#160 &#160 - Fahrer und Beifahrersitz höhenverstellbar und drehbar<br>
+     &#160 &#160 &#160 &#160zum, Wohnbereich im Fond<br>
      &#160 &#160 &#160 &#160-	Armlehnen<br>
      &#160 &#160 - Und vieles mehr…<br>
      </p>
