--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <p class="small">&#160 &#160 - 20 Zoll Flachbildfernseher<br>
      &#160 &#160 - LED Innenbeleuchtung<br>
      &#160 &#160 - Wohnbereich im L- Format<br>
-     &#160 &#160 - Elektrisches Hochbett für 2 Personen mit einer Liegefläche von 140 cm x 200 cm<br>
-     &#160 &#160 &#160 &#160( Max. 230 Kg )<br>
+     &#160 &#160 - Elektrisches Hochbett für 2 Personen mit einer Liegefläche von<br>
+     &#160 &#160 &#160 &#160140 cm x 200cm ( Max. 230 Kg )<br>
      &#160 &#160 - Doppelbett für 2 Personen mit einer Liege fläche von<br>
      &#160 &#160 &#160 &#160175 cm  x 215 cm oder Umwandelbar in 2 Einzelbetten<br>
      &#160 &#160 - Grosser Kühlschrank 140 L Volumen mit besonderem Innenschrank<br>
