--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div clas="col-xs-8 col-sm-6">
     <b>&#160 &#160 Fahrzeugbeschreibung</b>
     <p class="small">&#160 &#160 - Wohnmobil Ford mit Diesel Motor, Euro 6, 2,0L Hubraum,<br>
-     &#160 &#160 &#160 &#160170 PS. 6 Gang Schaltgetriebe<br>
+     &#160 &#160 &#160 &#160 170 PS. 6 Gang Schaltgetriebe<br>
      &#160 &#160 - ABS + ESP<br>
      &#160 &#160 - Elektrische und beheizte AussenSpiegel<br>
      &#160 &#160 - Elektrische Fenterheber<br>
@@ -107,7 +107,7 @@
      &#160 &#160 - Lenkrad Fernbedienung<br>
      &#160 &#160 - Fahrer und Beifahrersitz höhenverstellbar und drehbar<br>
      &#160 &#160 &#160 &#160zum, Wohnbereich im Fond<br>
-     &#160 &#160 &#160 &#160-	Armlehnen<br>
+     &#160 &#160 &#160 &#160Armlehnen<br>
      &#160 &#160 - Und vieles mehr…<br>
      </p>
   </div>  
