--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
      &#160 &#160 - Radio mit Bluetooth und USB<br>
      &#160 &#160 - Lenkrad Fernbedienung<br>
      &#160 &#160 - Fahrer und Beifahrersitz höhenverstellbar und drehbar<br>
-     &#160 &#160 &#160 &#160zum, Wohnbereich im Fond<br>
-     &#160 &#160 &#160 &#160Armlehnen<br>
+     &#160 &#160 &#160 &#160zum, Wohnbereich im Fond Armlehnen<br>
      &#160 &#160 - Und vieles mehr…<br>
      </p>
   </div>  
