--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
      &#160 &#160 - Zwei Baterien<br>
      &#160 &#160 - LED Aussen Beleuchtung<br>
      &#160 &#160 - Klimaanlage ( funktioniert  mit 220 Volt )<br>
-     &#160 &#160 - Und vieles mehr<br>
+     &#160 &#160 - Und vieles mehr…<br>
 
      </p>
   </div>  
