--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <div class="container clearfix">
     <div class="nautical-2"></div>
     <div class="col-lg-12 centered header-wrapper no-plarge">
-      <h2>Formulario de Reserva</h2>
+      <h2>Reservierungs Formular</h2>
     </div>
   </div>
   <!-- start reservation form -->  
@@ -149,29 +149,29 @@
     <form action="https://autocaravanastucasaacuestas.us12.list-manage.com/subscribe/post?u=7ea99a1b65be6102d01dcb4b0&amp;id=11e06e95fe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
       
-    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+    <div class="indicates-required"><span class="asterisk">*</span>Persönliche Daten</div>
     <div class="mc-field-group">
       <div class="col-lg-3 col-md-6 col-sm-6">
-      <label for="mce-FNAME">Nombre </label>
+      <label for="mce-FNAME">Name</label>
       <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
       </div>
     </div>
     <div class="mc-field-group">
       <div class="col-lg-3 col-md-6 col-sm-6">
-      <label for="mce-EMAIL">Email  <span class="asterisk">*</span></label>
+      <label for="mce-EMAIL">Email<span class="asterisk">*</span></label>
       <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
       </div>
     </div>
     <div class="mc-field-group size1of2">
       <div class="col-lg-3 col-md-6 col-sm-6">
-      <label for="mce-PHONE">Teléfono </label>
+      <label for="mce-PHONE">Telefonnummer</label>
       <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
       </div>
     </div>
 
     <div class="mc-field-group">
       <div class="col-lg-3 col-md-6 col-sm-6">
-      <label for="mce-MMERGE7">Autocaravana </label>
+      <label for="mce-MMERGE7">Wohnmobil</label>
       <select type="text" value="" name="MMERGE7" class="" id="mce-MMERGE7">
         <option value="Benimar Tessoro 463" selected>Benimar Tessoro 463</option>
       </select>
@@ -181,10 +181,10 @@
 
               <div class="col-lg-6 col-md-6 col-sm-6">
           <div class="input-daterange input-group" id="datepicker">
-            <label>Fecha de llegada</label>
+            <label>Abholdatum</label>
             <input type="text" name="MMERGE3" id="mce-MMERGE3" />
             <span class="input-group-addon"></span>
-            <label>Fecha de salida</label>
+            <label>Rückgabedatum</label>
             <input type="text" name="MMERGE5" id="mce-MMERGE5" />
           </div>
         </div>
@@ -192,7 +192,7 @@
       <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="mc-field-group ">
           <div class="col-lg-4 col-md-6 col-sm-6">
-          <label for="mce-MMERGE2">Adultos<span class="asterisk">*</span></label>
+          <label for="mce-MMERGE2">Erwachsene<span class="asterisk">*</span></label>
             <select type="number" name="MMERGE2" class="required" value="" id="mce-MMERGE2">
               <option value="0" selected>0</option>
               <option value="1">1</option>
@@ -205,7 +205,7 @@
         </div>
         <div class="mc-field-group ">
           <div class="col-lg-4 col-md-6 col-sm-6">
-          <label for="mce-MMERGE6">Niños<span class="asterisk">*</span></label>
+          <label for="mce-MMERGE6">Kinder<span class="asterisk">*</span></label>
           <select type="number" name="MMERGE6" class="required" value="" id="mce-MMERGE6">
               <option value="0" selected>0</option>
               <option value="1">1</option>
@@ -217,7 +217,7 @@
         </div>
         <div class="mc-field-group">
           <div class="col-lg-4 col-md-6 col-sm-6">
-          <label for="mce-MMERGE8">Promoción </label>
+          <label for="mce-MMERGE8">Angebote</label>
           <select type="text" value="" name="MMERGE8" class="" id="mce-MMERGE8">
             <option value="Sin Promoción" selected>Sin Promoción</option>
              <option value="Promoción Temp. Baja">Promoción Temp. Baja</option>
@@ -235,7 +235,7 @@
       <div class="col-lg-12 centered">
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ea99a1b65be6102d01dcb4b0_11e06e95fe" tabindex="-1" value=""></div>
         <div class="clear"><input type="submit" value="Reserva" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        <b>Estancia mínima de 3 noches en temporada baja, 4 noches temporada media, 7 noches en temporada alta (Sin limite de kms a partir de 7 noches).</b>
+        <b>Die Mindest- Reservierungsdauer beträgt 3 Nächte in der Nebensaison, 4 Nächte in der Zwischensaison und 7 Nächte in der Hauptsaison. Ab 7 Übernachtungen keine Kilometerbegrenzung.</b>
             <div class="message-holder"><span id="message"></span></div>
       </div>
     </div>
