--- a/index.html
+++ b/index.html
@@ -277,17 +277,17 @@
   <div class="container clearfix">
     <div class="nautical-4"></div>
     <div class="col-lg-12 centered header-wrapper">
-      <h2>Tarifa y Equipamiento opcional</h2>
+      <h2>Tarife und optionale Ausrüstung</h2>
     </div>
   </div>
   <div class="container clearfix">
     <div id="container">
       <div class="col-lg-12 col-md-6 col-sm-6 element home">
         <div class="border-wrapper">
-          <h4> Tarifa diaria según temporadas</h4>
-          <hr><b>Temporada baja:</b> 100€  De Octubre a Marzo salvo Puentes, fiestas locales y premio de motos.</hr>
-          <hr><b>Temporada media:</b> 130€  Abril, Mayo, Junio, Septiembre, Puentes, fiestas locales y premios de motos.</hr>
-          <hr><b>Temporada alta:</b> 160€  Julio, Agosto, Semana Santa y Feria de Sevilla.</hr>
+          <h4>Tages Tarife nach Jahreszeiten</h4>
+          <hr><b>Nebensaison:</b> 100€  pro Tag von Oktober bis März, ausser Brückentage, Feiertage und Motorad Festivale.</hr>
+          <hr><b>Zwischensaison:</b> 130€  pro Tag im Mai, Juni, September, Brückentage, Feiertage und Motorad Festivale.</hr>
+          <hr><b>Hauptsaison:</b> 160€  pro Tag im Juli, August, Ostern und Feria de Sevilla.</hr>
         </div>        
       </div>
     </div>
@@ -297,48 +297,48 @@
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons food-dome-serving"></div>
-          <h4>PACK WELCOME</h4>
-          <p>Menaje de cocina, sábanas, toallas, almohadas, set de cocina, set de limpieza, transformador 150W, guía camping y áreas, manual de usuario.</p>
+          <h4>Willkommen</h4>
+          <p>Küchengeschirr, Bettwäsche, Handtücher, Decken und Kissen, Küchenset, Reinigungset, 150 Watt Trafo, Campingführer, Bedienungsanleitung.</p>
           <h4>50€</h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons airplane-arrival"></div>
-          <h4>TRASLADOS</h4>
-          <p>Se realizarán los traslados desde el aeropuerto, estación de tren o estación de autobus de Sevilla (precio por trayecto).</p>
+          <h4>Transfers</h4>
+          <p>Transfer von Flughafen, Zugstation, Busbahnof in Sevilla warden durchgeführt. (Fahrpreis pro Fahrt).</p>
           <h4>60€</h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons fridge"></div>
-          <h4>LLENADO DE NEVERA</h4>
-          <p>Se realizará la compra indicada por el cliente con la lista de la compra del Mercadona (supermercado local) cobrando la factura.</p>
+          <h4>Kühlschrankbestückung</h4>
+          <p>Gerne füllen wir nach Ihren Vorgaben den Kühlschrank auf mit sämtlichen Artikeln des lokalen Supermarkts (Mercadona).</p>
           <h4>30€</h4>
         </div>
       </div>   
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons sillita"></div>
-          <h4>ELEVADOR</h4>
-          <p>Se facilitará un elevador para niños con altura inferior a 1,35 y un peso entre 15 y 36 kg (unidad).</p>
+          <h4>Kindersitz</h4>
+          <p>Für Kinder mit einer Körpergrösse von weniger als 1,35 m und einem Gewicht zwischen 15 Kg und 36 Kg wird ein Kindersitz.</p>
           <h4>20€</h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons map-pin-1"></div>
-          <h4>NAVEGADOR GPS</h4>
-          <p>Navegador GPS 7" + APP guía de aparcamiento, pernocta y camping.</p>
+          <h4>Navigation / GPS</h4>
+          <p>Navigation GPS 7¨ + APP für Parkplatzsuche/ finder Üernachtungen und Camping.</p>
           <h4>50€</h4>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-6 element home">
         <div class="border-wrapper1">
           <div class="icons mesa"></div>
-          <h4>MESA Y SILLAS</h4>
-          <p>Mesa y sillas tipo "camping" para todos los clientes (máx. 5).</p>
+          <h4>Tisch und Stühle</h4>
+          <p>Camping Tisch und Stühle für max 5 Personen stellen.</p>
           <h4>30€</h4>
         </div>
       </div>
@@ -351,7 +351,7 @@
   <div class="container clearfix">
     <div class="nautical-5"></div>
     <div class="col-lg-12 centered header-wrapper">
-      <h2>Elija la promoción que más se adapte a sus necesidades y ahorre en las vacaciones.</h2>
+      <h2>Wählen Sie das Angebot aus, das Ihren Bedürfnissen am besten entspricht und sparen sie beim Urlaub.</h2>
     </div>
   </div>
   </div>
@@ -359,10 +359,10 @@
     <div id="container">
       <div class="col-lg-12 col-md-6 col-sm-6 element home">
         <div class="border-wrapper">
-          <h4> Descuentos no acumulables</h4>
-          <hr><b>5%</b> Por alquileres de más de 10 días.</hr>
-          <hr><b>15%</b> Por alquileres de más de 20 días.</hr>
-          <hr><b>10%</b> Por reservar y pagar 3 meses antes de la fecha de salida.</hr>
+          <h4> Nicht kumulative Rabatte</h4>
+          <hr><b>5%</b> Rabatt von mehr als 10 Tagen bei Anmietung.</hr>
+          <hr><b>15%</b> Rabatt bei Anmietung von mehr als 20 Tagen.</hr>
+          <hr><b>10%</b> Rabatt bei Buchung und Bezahlung bei 3 Monate vor Reiseantritt.</hr>
         </div>        
       </div>
     </div>
