--- a/index.html
+++ b/index.html
@@ -369,33 +369,33 @@
     <div class="col-lg-4 col-md-4"> <img alt="" src="images/temp-media.jpg" />
       <figure class="price-table">
         <div class="heading">
-          <h4>15 días en Temp. Media</h4>
+          <h4>15 Tage in der Zwischensaison </h4>
         </div>
         <p class="price"><span>€</span>1.650</p>
-        <p class="price-details">Abril, Mayo, Junio y Septiembre.<br />
-          <b>Precio sujeto a pago anticipado</b> <br /></p>
-        <a href="index.html#section3" class="button"><i class="fa fa-shopping-cart"></i> Reserva</a> </figure>
+        <p class="price-details">April, Mai, Juni und September.<br />
+          <b>Preis vorbehaltlich vorauszahlung</b> <br /></p>
+        <a href="index.html#section3" class="button"><i class="fa fa-shopping-cart"></i>Reservierung</a> </figure>
     </div>
     <div class="col-lg-4 col-md-4"><img alt="" src="images/temp-baja.jpg" />
       <figure class="price-table highlighted">
         <div class="heading">
-          <p class="small">La más económica</p>
-          <h3>15 días en Temp. Baja</h3>
+          <p class="small">DER WIRTSCHAFTLICHSTE</p>
+          <h3>15 Tage in der Nebensaison</h3>
         </div>
         <p class="price"><span>€</span>1.200</p>
-        <p class="price-details">De Octubre a Marzo.<br />
-         <b>Precio sujeto a pago anticipado</b> <br /></p>
-        <a href="index.html#section3" class="button full-color"><i class="fa fa-shopping-cart"></i> Reserva</a> </figure>
+        <p class="price-details">Von Oktober bis März.<br />
+         <b>Preis vorbehaltlich vorauszahlung</b> <br /></p>
+        <a href="index.html#section3" class="button full-color"><i class="fa fa-shopping-cart"></i>Reservierung</a> </figure>
     </div>
     <div class="col-lg-4 col-md-4"><img alt="" src="images/Temp-alta.jpg" />
       <figure class="price-table">
         <div class="heading">
-          <h4>15 días en Temp. Alta</h4>
+          <h4>15 Tage in der Hauptsaison</h4>
         </div>
         <p class="price"><span>€</span>2.100</p>
-        <p class="price-details">Julio y Agosto.<br />
-          <b>Precio sujeto a pago anticipado</b> <br /></p>
-        <a href="index.html#section3" class="button full-color"><i class="fa fa-shopping-cart"></i> Reserva</a> </figure>
+        <p class="price-details">Juli und August.<br />
+          <b>Preis vorbehaltlich vorauszahlung</b> <br /></p>
+        <a href="index.html#section3" class="button full-color"><i class="fa fa-shopping-cart"></i>Reservierung</a> </figure>
     </div>
   </div>
 </section>
@@ -404,23 +404,23 @@
   <div class="container clearfix">
     <div class="nautical-6"></div>
     <div class="col-lg-12 centered header-wrapper">
-      <h2>Contacta con nosotros</h2>
-      <p class="large">Tu Casa a Cuestas pertenece a PrinkSevilla S.L. Si tiene alguna pregunta, sugerencia o si quiere reservar un viaje, por favor contacte con nosotros. ¡Nos pondremos en contacto con usted lo antes posible!</p>
+      <h2>Kontaktieren Sie uns</h2>
+      <p class="large">Tu Casa a Cuestas gehört zu PrinkSevilla S.L. Wenn Sie fragen oder Anregungen haben oder ein Wohnmobil mieten möchten Kontaktieren Sie uns bitte.Wir werden uns schnellstmöglich mit Ihnen in Verbindung setzen. Wir freuen uns auf ihre Reservierung.</p>
     </div>
     <div class="col-lg-3 col-md-3 centered contact-wrapper">
       <div class="icons map-pin-1"></div>
-      <p class="small">Direcciones</p>
-      <p><b>Oficina: </b>C/Virgen de Luján, 51<br />
+      <p class="small">Adresse</p>
+      <p><b>Büro: </b>C/Virgen de Luján, 51<br />
         Sevilla 41011<br />
         España</p>
-      <p><b>Parking: </b>Ctra Alcalá-Sevilla km,0<br />
-        Alcalá de Guadaría 41500<br />
+      <p><b>Parking: </b>C/ Pasadilla de Barranco, 3<br />
+        Dos hermanas 41703<br />
         España</p>
     </div>
     <div class="col-lg-3 col-md-3 centered contact-wrapper">
       <div class="icons fax-machine"></div>
-      <p class="small">Teléfonos</p>
-      <p>(+34) 637 752 451 (Javier)<br />
+      <p class="small">Telefonnummer:</p>
+      <p>(+34) 637 752 451 (Javier Rodríguez)<br />
          (+34) 954 455 646</p>
     </div>
     <div class="col-lg-3 col-md-3 centered contact-wrapper">
@@ -431,7 +431,7 @@
     <div class="col-lg-3 col-md-3 centered contact-wrapper">
       <div class="icons network"></div>
       <p class="small">Red Social</p>
-      <p>Contacte con nosotros:</p>
+      <p>Kontaktieren Sie uns:</p>
       <ul class="social-list clearfix">
         <li> <a href="https://www.instagram.com/tucasaacuestas/"><i class="fa fa-instagram"></i></a> </li>
         <li> <a href="https://www.facebook.com/TuCasaaCuestas/"><i class="fa fa-facebook"></i></a> </li>
