--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
       <div class="col-lg-12 centered">
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ea99a1b65be6102d01dcb4b0_11e06e95fe" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Reserva" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        <div class="clear"><input type="submit" value="Reservierung" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
         <b>Die Mindest- Reservierungsdauer beträgt 3 Nächte in der Nebensaison, 4 Nächte in der Zwischensaison und 7 Nächte in der Hauptsaison. Ab 7 Übernachtungen keine Kilometerbegrenzung.</b>
             <div class="message-holder"><span id="message"></span></div>
       </div>
