--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
           <div class="col-lg-4 col-md-6 col-sm-6">
           <label for="mce-MMERGE8">Angebote</label>
           <select type="text" value="" name="MMERGE8" class="" id="mce-MMERGE8">
-            <option value="Sin Promoción" selected>Sin Promoción</option>
-             <option value="Promoción Temp. Baja">Promoción Temp. Baja</option>
-             <option value="Promoción Temp. Media">Promoción Temp. Media</option>
-             <option value="Promoción Temp. Alta">Promoción Temp. Alta</option>
+            <option value="Sin Promoción" selected>Ohne Angebot</option>
+             <option value="Promoción Temp. Baja">Angebot Nebensaison</option>
+             <option value="Promoción Temp. Media">Angebot Zwischensaison</option>
+             <option value="Promoción Temp. Alta">Angebot Hauptsaison</option>
           </select> 
           </div>
         </div>
